test/libsolidity/syntaxTests/structs/struct_var_member.sol
contract C {
	struct S {
		var x;
	}
}
// ----
// ParserError 7059: (27-30): Expected explicit type name.
